--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project: Library</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Library</h1>
+    </header>
+    <main>
+        <div class="sidebar">
+            <p>content holder</p>
+        </div>
+        <div class="body"></div>
+    </main>
+    <footer>
+        <h2>footer</h2>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
