--- a/index.html
+++ b/index.html
@@ -13,12 +13,30 @@
     </header>
     <main>
         <div class="sidebar">
-            <p>content holder</p>
+            <h1>Add a Book</h1>
+            
+            <form id="form">
+                <label for="title">Title</label>
+                <input type="text" id="title" name="title">
+                <label for="author">Author:</label>
+                <input type="text" id="author" name="author">
+                <label for="genre">Title</label>
+                <input type="text" id="genre" name="genre">
+                <p class="radForm">
+                    <!-- Read:<br> -->
+                    <label for="read">Read:</label>
+                    <input type="radio" id="read" name="read">
+                    <label for="read">Want:</label>
+                    <input type="radio" id="want" name="want">
+                </p>
+                <button id="submit">Add!</button>
+            </form>
         </div>
         <div class="body"></div>
     </main>
     <footer>
         <h2>footer</h2>
+        <p>form validation not setup!</p>
     </footer>
     <script src="script.js"></script>
 </body>
