--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
                     <!-- Read:<br> -->
                     <label for="read">Read:</label>
                     <input type="radio" id="read" name="read">
-                    <label for="read">Want:</label>
+                    <label for="reading">Currently Reading:</label>
+                    <input type="radio" id="reading" name="reading">
+                    <label for="want">Want:</label>
                     <input type="radio" id="want" name="want">
                 </p>
-                <button id="submit">Add!</button>
+                <button id="submit" type="submit">Add!</button>
             </form>
         </div>
         <div class="body"></div>
