--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
                 <input type="text" id="title" name="title">
                 <label for="author">Author:</label>
                 <input type="text" id="author" name="author">
-                <label for="genre">Title</label>
+                <label for="genre">Genre</label>
                 <input type="text" id="genre" name="genre">
                 <p class="radForm">
                     <!-- Read:<br> -->
                     <label for="read">Read:</label>
-                    <input type="radio" id="read" name="read">
+                    <input type="radio" id="read" name="read_stat" value="Read">
                     <label for="reading">Currently Reading:</label>
-                    <input type="radio" id="reading" name="reading">
+                    <input type="radio" id="reading" name="read_stat" value="Currently Reading">
                     <label for="want">Want:</label>
-                    <input type="radio" id="want" name="want">
+                    <input type="radio" id="want" name="read_stat" value="Want">
                 </p>
                 <button id="submit" type="submit">Add!</button>
             </form>
         </div>
-        <div class="body"></div>
+        <div id="mainBod"></div>
     </main>
     <footer>
         <h2>footer</h2>
